CELE-80 Consider now multiple URLs for 3D models
This modification is mandatory to tackle the fact that there is 2 3D
models by classes.
Neuron classes need to be added to the results by the frontend as they
are not part of the DB, but the frontend needs to let the ability for
users to display them.
